fix text wrapping on hover and resize in multiplayer-room element.
(wtf)

--- a/resources/assets/less/bem/user-profile-pages.less
+++ b/resources/assets/less/bem/user-profile-pages.less
@@ -5,6 +5,7 @@
   .page-width-default();
   position: relative;
   margin: 10px auto auto;
+  overflow-wrap: break-word;
 
   &__item {
     display: flex;
